# FormalGuard-

./: .gitignore  EXECUTION_PLAN.md  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
compliance/: schema.yaml
compliance/fips_140_3/: README.md  mapping.yaml
compliance/iso27001/: mapping.yaml
compliance/pci_dss/: README.md  mapping.yaml
compliance/sox/: README.md  mapping.yaml
compliance/swift_csp/: README.md  mapping.yaml
docs/: architecture.md  compliance-mapping.md  contributing.md  getting-started.md  property-catalog.md  threat-models.md
examples/aes256_basic/: README.md  run.sh
examples/compliance_audit/: README.md  sample_report.html  sample_results.json
files/: README.md  SPEC.md
interfaces/: fg_aes256_if.sv  fg_ecdsa_if.sv  fg_hsm_if.sv  fg_pkg.sv  fg_rsa_if.sv  fg_sc_if.sv  fg_sha256_if.sv  fg_tx_if.sv
properties/side_channel/: README.md  constant_time.sv  data_independent_flow.sv  power_balanced.sv
properties/transaction/: README.md  atomicity.sv  integrity.sv  isolation.sv  ordering.sv
reference_designs/aes256_core/: Makefile  aes256_core.sby  aes256_core.sv  aes256_core_top.sv  aes256_sbox.sv  fg_bind_aes256_core.sv
reference_designs/simple_hsm/: Makefile  fg_bind_simple_hsm.sv  simple_hsm.sby  simple_hsm.sv  simple_hsm_top.sv
scripts/: run_formal.sh
tests/: __init__.py  test_aes_properties.py  test_compliance_mapping.py  test_hsm_properties.py
tools/: __init__.py  compliance_report.py  coverage_dashboard.py  property_lint.py  results_schema.json
(+41 files in other folders)
